--- a/karlson.html
+++ b/karlson.html
@@ -1,5 +1,5 @@
-<!-- Ultimate Game Stash file--> 
-<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+<!-- Brought to you by BarfbagX2 --> 
+<!-- follow the insta @litho_band -->
  
 <!DOCTYPE html>
 <html lang="en-us">
@@ -107,4 +107,5 @@ window.addEventListener("load", startUnity);
   </div>
   <div id="unityContainer" style="width: 960px; height: 600px; margin: auto"></div>
 </body>
+
 </html>
